--- a/app/src/main/res/layout/activity_lend_list.xml
+++ b/app/src/main/res/layout/activity_lend_list.xml
@@ -16,6 +16,7 @@
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginBottom="20dp"
+        android:listSelector="@android:color/transparent"
         ></ListView>
 
     <Button
