--- a/app/src/main/res/layout/activity_lend_confirmation.xml
+++ b/app/src/main/res/layout/activity_lend_confirmation.xml
@@ -41,7 +41,7 @@
         android:layout_marginTop="25dp"
         android:id="@+id/rent_home_button1"
         android:background="#5a000000"
-        android:text="Home"
+        android:text="Items Listed"
         android:textColor="#FFFFFF"
         />
 
