--- a/app/src/main/res/layout/activity_rent_confirmation.xml
+++ b/app/src/main/res/layout/activity_rent_confirmation.xml
@@ -64,12 +64,13 @@
             android:textColor="#FFFFFF"/>
 
         <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:textSize="20sp"
-        android:textColor="#FFFFFF"
-        android:text="Price: $20.00 per day"/>
+            android:id="@+id/per_day"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:text="Price: $20.00 per day"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/price_total"
