--- a/app/src/main/res/layout/home_screen.xml
+++ b/app/src/main/res/layout/home_screen.xml
@@ -19,11 +19,10 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Welcome! Choose an option below."
-        android:textSize="20sp"
         android:layout_gravity="center_horizontal"
+        android:text="Welcome! Choose an option below:"
         android:textColor="#FFFFFF"
-        >
+        android:textSize="20sp">
 
     </TextView>
 
