--- a/app/src/main/res/layout/rent_page_one.xml
+++ b/app/src/main/res/layout/rent_page_one.xml
@@ -5,14 +5,14 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/item_name_page"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
         android:layout_gravity="center_horizontal"
-        android:textSize="25sp"
+        android:layout_marginTop="15dp"
+        android:text="BBQ Charcoal Grill - $20 per day"
         android:textColor="#000000"
-        android:text="BBQ Charcoal Grill - $20 per day">
-    </TextView>
+        android:textSize="25sp"></TextView>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -21,28 +21,14 @@
         android:layout_gravity="center"
         android:orientation="horizontal">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginEnd="10dp"
-            android:src="@drawable/arrow_left">
-        </ImageView>
 
         <ImageView
+            android:id="@+id/item_image_page"
             android:layout_width="300dp"
-            android:layout_height="300dp"
+            android:layout_height="250dp"
             android:layout_gravity="center_horizontal"
-            android:src="@drawable/grill">
-        </ImageView>
+            android:src="@drawable/grill"></ImageView>
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="10dp"
-            android:src="@drawable/arrow_right">
-        </ImageView>
     </LinearLayout>
 
     <LinearLayout
@@ -94,14 +80,14 @@
         </ImageView>
 
         <TextView
+            android:id="@+id/item_rating_page"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:gravity="center"
-            android:textSize="15sp"
+            android:text="32 Reviews"
             android:textColor="#000000"
-            android:text="32 Reviews">
-        </TextView>
+            android:textSize="15sp"></TextView>
     </LinearLayout>
 
     <TextView
@@ -116,15 +102,15 @@
     </TextView>
 
     <TextView
+        android:id="@+id/item_description_page"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
         android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
         android:layout_marginRight="10dp"
-        android:textSize="20sp"
+        android:text="Lightly used Weber Grill! About 5 years old, but only used twice a year. Let me know if you have further questions!"
         android:textColor="#000000"
-        android:text="Lightly used Weber Grill! About 5 years old, but only used twice a year. Let me know if you have further questions!">
-    </TextView>
+        android:textSize="20sp"></TextView>
 
 
     <LinearLayout
@@ -146,10 +132,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
-            android:textSize="18sp"
+            android:text="December 13th - December 30th"
             android:textColor="#000000"
-            android:text="November 18th - November 30th">
-        </TextView>
+            android:textSize="18sp"></TextView>
     </LinearLayout>
 
     <LinearLayout
