--- a/app/src/main/res/layout/user_page.xml
+++ b/app/src/main/res/layout/user_page.xml
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="40sp"
-        android:text="FirstName LastName"
+        android:text="Joe Remington"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
         android:gravity="center">
